# truckit-autosuggest

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
backend/: .gitignore  Dockerfile  README.md
backend/src/autosuggest/: app.py
backend/src/tests/: test_categories.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: autosuggest.ts  main.ts
src/: autosuggest.ts  main.ts  vite-env.d.ts
src/autosuggest/: app.py  categories.py
