[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autosuggest"
version = "0.0.1"
authors = [
  { name="Natasha Craike", email="natasha@ncraike.com" },
]
description = "A simple autosuggest REST API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


