[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Natasha Craike", email = "natasha@ncraike.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "bottle ~= 0.13.2",
  "bottle-cors-plugin ~= 0.1.9",
]
description = "A simple autosuggest REST API"
license = "MIT"
name = "autosuggest"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
